feat(Backend): Add sign up with prisma

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -36,8 +36,8 @@
       "@interfaces/*": [
         "interfaces/*"
       ],
-      "@models/*": [
-        "models/*"
+      "@libs/*": [
+        "libs/*"
       ],
       "@database/*": [
         "database/*"
