--- a/tsconfig.json
+++ b/tsconfig.json
@@ -33,8 +33,8 @@
       "@pages/*": [
         "../pages/*"
       ],
-      "@interfaces/*": [
-        "interfaces/*"
+      "@types/*": [
+        "types/*"
       ],
       "@libs/*": [
         "libs/*"
