feat: Add price and  description

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,8 +21,8 @@
     ],
     "baseUrl": "./app/",
     "paths": {
-      "@styles/*": [
-        "styles/*"
+      "@actions/*": [
+        "actions/*"
       ],
       "@components/*": [
         "components/*"
