--- a/tsconfig.json
+++ b/tsconfig.json
@@ -33,8 +33,8 @@
       "@pages/*": [
         "../pages/*"
       ],
-      "@types/*": [
-        "types/*"
+      "@listings/*": [
+        "listings/*"
       ],
       "@libs/*": [
         "libs/*"
